--- a/src/app/programs/programs.component.html
+++ b/src/app/programs/programs.component.html
@@ -66,6 +66,12 @@
                                     <input type="text" [(ngModel)]="new_program_code" name="new_program_code" required="required" class="form-control col-md-7 col-xs-12">
                                 </div>
                             </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12">Program Email*</label>
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <input type="text" [(ngModel)]="new_email_domain" name="new_email_domain" required="required" class="form-control col-md-7 col-xs-12">
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="modal-footer">
