--- a/src/app/dashboard/dashboard-student/dashboard-student.component.html
+++ b/src/app/dashboard/dashboard-student/dashboard-student.component.html
@@ -23,6 +23,7 @@
                             </li>
                         </ul>
                         <button class="btn btn-primary" (click)="onEditProfile()"><i class="fa fa-pencil"></i> Edit</button>
+                        <button class="btn btn-primary" (click)="onUploadFace()"><i class="fa fa-upload"></i> Upload face</button>
                     </ng-container>
                     <ng-container *ngIf="isEditingProfile" (keydown)="keyDownFunction($event)">
                         <h3><input class="form-control" type="text" name="editing_name" [(ngModel)] = "editing_name"></h3>
